Week2/snapshot/runs/week2_group07_97907/week2_group07_97907.err
  File "/export/home/group07/week2/main.py", line 301
    class_names=class_names
                ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
